[package]
name = "perpetuals"
version = "0.1.0"
description = "Solana Perpetuals Exchange"
authors = ["Solana Maintainers <maintainers@solana.foundation>"]
repository = "https://github.com/solana-labs/perpetuals"
categories = ["finance"]
keywords = ["solana", "dex", "perpetuals", "futures", "exchange"]
license = "Apache-2.0"
homepage = "https://solana.com/"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "perpetuals"

[features]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
cpi = []
test = []
default = ["cpi"]

[dependencies]
anchor-lang = { version = "0.27.0", features = ["init-if-needed"]}
anchor-spl = "0.27.0"

# need it because using zero_copy (anchor 0.27.0 breaking change)
# https://github.com/coral-xyz/anchor/blob/master/CHANGELOG.md
bytemuck = { version = "1.4.0", features = ["derive", "min_const_generics"]}

solana-program = "=1.14.16"
solana-security-txt = "1.1.0"
ahash = "0.7.6"
num-traits = "0.2.15"
num = "0.4.0"

pyth-sdk-solana = "0.7.2"
spl-governance = { tag = "governance-v3.1.0", git = "https://github.com/solana-labs/solana-program-library", features = ["no-entrypoint"] }

clockwork-sdk = { version = "=2.0.17" }

[dev-dependencies]
solana-program-test = "=1.14.16"
solana-sdk = "=1.14.16"
tokio = { version = "1.0.0", features = ["macros"]}
bonfida-test-utils = "0.2.1"
bincode = "1.3.3"
proptest = "1.1.0"
clockwork-thread-program = { version = "=2.0.17" } 
clockwork-network-program = { version = "=2.0.17" }
maplit = "1.0.2"